Fixing the  horizontal scrollbar

--- a/src/features/browse/components/content.module.scss
+++ b/src/features/browse/components/content.module.scss
@@ -65,6 +65,7 @@
   flex-direction: row;
   overflow-x: scroll;
   overflow-y: hidden;
+  overflow: hidden;
 }
 
 .notifications::-webkit-scrollbar {
